# koroonakaart

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js
.github/workflows/: package.yml
TEHIK_Open_Data_Loading_Scripts/: README.md  chart_data_functions.py  constants.py  data_new.json  deaths.json  deaths_scraper.py  helpers.py  main.py  manualData.json  manual_data.json  manual_data_transformation.py  pyproject.toml  requirements.txt  run.sh  update_data.py  update_data.sh  utils.py
css/: main-v001.css  main.css
data/: counties.csv  counties_dummy.csv  data.json  deaths.json  manual_data.json  population.csv  population_by_country.csv  population_by_county.csv  population_by_municipality.csv  population_by_sex_age_year.csv
data/json/: counties.json  population.json  settlements.json
data/topojson/: municipalities.json
javascript/: chartvis.js  moving_average.js  plotly-locale-et-modified.js  popPyramid.min.js  visualisation.js  vue_app.js
koroonakaart/: .env  .gitignore  HTTP500.html  README.md  package-lock.json  package.json  pnpm-lock.yaml  vue.config.js
koroonakaart/public/: index.html
koroonakaart/public/error/: server_error.html
koroonakaart/src/: App.vue  app.css  data.json  data2.json  dataConstants.js  dataLoading.R  i18n.js  main.js
old/: .gitignore  index.html
old/css/: main-v001.css
old/data/: population_by_country.csv  population_by_municipality.csv
old/javascript/: chartvis.js  visualisation.js
(+84 files in other folders)
